adding implosion_compressor and fixing industrial_centrifuge
plus some other random stuff like improving grouping and adding some missing art

--- a/docs/blocks/machines/assembling_machine.mdx
+++ b/docs/blocks/machines/assembling_machine.mdx
@@ -187,7 +187,9 @@ The **Assembling Machine** is used to assemble components out of ingredients.
     "time": 200
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:data_storage_core" /></summary>
+				<Machine config={{
   "id": "data_storage_core",
   "input": [
     {
@@ -235,6 +237,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
     "time": 200
   }
 }} />
+				</details>
 <Machine config={{
   "id": "dune_armor_trim_smithing_template",
   "input": [
