--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -333,7 +333,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:calcite_dust" /></summary>
+				<Machine config={{
   "id": "calcite_dust",
   "input": [
     {
@@ -373,6 +375,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 500
   }
 }} />
+				</details>
 <Machine config={{
   "id": "calcite_small_dust",
   "input": [
@@ -393,7 +396,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 100
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="ae2:certus_quartz_dust" /></summary>
+				<Machine config={{
   "id": "certus_quartz_dust",
   "input": [
     {
@@ -433,6 +438,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 300
   }
 }} />
+				</details>
 <Machine config={{
   "id": "charcoal_dust",
   "input": [
@@ -556,7 +562,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:coal_dust" /></summary>
+				<Machine config={{
   "id": "coal_dust",
   "input": [
     {
@@ -596,6 +604,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 400
   }
 }} />
+				</details>
 <Machine config={{
   "id": "cyan_concrete_powder_from_concrete",
   "input": [
@@ -656,7 +665,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 270
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:diamond_small_dust" /></summary>
+				<Machine config={{
   "id": "diamond_small_dust",
   "input": [
     {
@@ -696,6 +707,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
+				</details>
 <Machine config={{
   "id": "diorite_dust",
   "input": [
@@ -939,7 +951,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 220
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:glowstone_small_dust" /></summary>
+				<Machine config={{
   "id": "glowstone_small_dust",
   "input": [
     {
@@ -979,6 +993,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 150
   }
 }} />
+				</details>
 <Machine config={{
   "id": "granite_dust",
   "input": [
@@ -1222,7 +1237,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:marble_dust" /></summary>
+				<Machine config={{
   "id": "marble_dust",
   "input": [
     {
@@ -1246,7 +1263,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "marble_dust_2",
   "input": [
     {
-      "id": "minecraft:marble",
+      "id": "minecraft:calcite",
       "qty": 1
     }
   ],
@@ -1262,6 +1279,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 180
   }
 }} />
+				</details>
 <Machine config={{
   "id": "netherite_scrap",
   "input": [
@@ -1282,7 +1300,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:netherrack_dust" /></summary>
+				<Machine config={{
   "id": "netherrack_dust",
   "input": [
     {
@@ -1322,6 +1342,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
+				</details>
 <Machine config={{
   "id": "netherrack_dust_3",
   "input": [
@@ -1551,7 +1572,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   }
 }} />
 				</details>
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:prismarine_crystals" /></summary>
+				<Machine config={{
   "id": "prismarine_crystals",
   "input": [
     {
@@ -1591,7 +1614,10 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 400
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:prismarine_shard" /></summary>
+				<Machine config={{
   "id": "prismarine_shard",
   "input": [
     {
@@ -1631,6 +1657,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 400
   }
 }} />
+				</details>
 <Machine config={{
   "id": "purple_concrete_powder_from_concrete",
   "input": [
@@ -1691,7 +1718,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 270
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:quartz_dust" /></summary>
+				<Machine config={{
   "id": "quartz_dust",
   "input": [
     {
@@ -1731,6 +1760,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 1080
   }
 }} />
+				</details>
 <Machine config={{
   "id": "raw_copper",
   "input": [
@@ -2812,7 +2842,9 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 300
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="techreborn:sulfur_dust" /></summary>
+				<Machine config={{
   "id": "sulfur_dust",
   "input": [
     {
@@ -2852,6 +2884,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
     "time": 200
   }
 }} />
+				</details>
 <details>
 				<summary><McItem slug="techreborn:titanium_dust" /></summary>
 				<Machine config={{
