--- a/docs/blocks/machines/implosion_compressor.mdx
+++ b/docs/blocks/machines/implosion_compressor.mdx
@@ -19,28 +19,716 @@ The **second layer** contains 8x <McItem slug="techreborn:advanced_machine_casin
 The **third layer** is the same as the first layer. <img src="/img/blocks/layer3.png" alt="layer3.png"/><br/>
 Put the **Implosion Compressor** on the top and provide some energy to it. <img src="/img/blocks/implosion_compressor.png" alt="implosion_compressor.png"/>
 
-## Usage
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Implosion Compressor</summary>
+			<details>
+				<summary><McItem slug="minecraft:amethyst_shard" /></summary>
+				<Machine config={{
+  "id": "amethyst_shard",
+  "input": [
+    {
+      "id": "techreborn:amethyst_dust",
+      "qty": 8
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:amethyst_shard",
+      "qty": 16
+    },
+    {
+      "id": "techreborn:quartz_dust",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "amethyst_shard_2",
+  "input": [
+    {
+      "id": "techreborn:amethyst_dust",
+      "qty": 8
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:amethyst_shard",
+      "qty": 16
+    },
+    {
+      "id": "techreborn:quartz_dust",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="minecraft:diamond" /></summary>
+				<Machine config={{
+  "id": "diamond",
+  "input": [
+    {
+      "id": "techreborn:diamond_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:diamond",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "diamond_2",
+  "input": [
+    {
+      "id": "techreborn:diamond_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:diamond",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="minecraft:emerald" /></summary>
+				<Machine config={{
+  "id": "emerald",
+  "input": [
+    {
+      "id": "techreborn:emerald_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:emerald",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "emerald_2",
+  "input": [
+    {
+      "id": "techreborn:emerald_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:emerald",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:iridium_alloy_plate" /></summary>
+				<Machine config={{
+  "id": "iridium_alloy_plate",
+  "input": [
+    {
+      "id": "techreborn:iridium_alloy_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 8
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iridium_alloy_plate",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "iridium_alloy_plate_2",
+  "input": [
+    {
+      "id": "techreborn:iridium_alloy_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iridium_alloy_plate",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="minecraft:netherite_ingot" /></summary>
+				<Machine config={{
+  "id": "netherite_ingot",
+  "input": [
+    {
+      "id": "techreborn:netherite_nugget",
+      "qty": 9
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:netherite_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "netherite_ingot_2",
+  "input": [
+    {
+      "id": "techreborn:netherite_nugget",
+      "qty": 9
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:netherite_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:peridot_gem" /></summary>
+				<Machine config={{
+  "id": "peridot_gem",
+  "input": [
+    {
+      "id": "techreborn:peridot_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:peridot_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "peridot_gem_2",
+  "input": [
+    {
+      "id": "techreborn:peridot_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:peridot_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:red_garnet_dust" /></summary>
+				<Machine config={{
+  "id": "red_garnet_dust",
+  "input": [
+    {
+      "id": "minecraft:block_of_redstone",
+      "qty": 9
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "red_garnet_dust_2",
+  "input": [
+    {
+      "id": "minecraft:block_of_redstone",
+      "qty": 9
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:red_garnet_gem" /></summary>
+				<Machine config={{
+  "id": "red_garnet_gem",
+  "input": [
+    {
+      "id": "techreborn:red_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "red_garnet_gem_2",
+  "input": [
+    {
+      "id": "techreborn:red_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:ruby_gem" /></summary>
+				<Machine config={{
+  "id": "ruby_gem",
+  "input": [
+    {
+      "id": "techreborn:ruby_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:ruby_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "ruby_gem_2",
+  "input": [
+    {
+      "id": "techreborn:ruby_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:ruby_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:sapphire_gem" /></summary>
+				<Machine config={{
+  "id": "sapphire_gem",
+  "input": [
+    {
+      "id": "techreborn:sapphire_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:sapphire_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "sapphire_gem_2",
+  "input": [
+    {
+      "id": "techreborn:sapphire_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:sapphire_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="minecraft:sculk_catalyst" /></summary>
+				<Machine config={{
+  "id": "sculk_catalyst",
+  "input": [
+    {
+      "id": "minecraft:sculk",
+      "qty": 64
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 8
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:sculk_catalyst",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "sculk_catalyst_2",
+  "input": [
+    {
+      "id": "minecraft:sculk",
+      "qty": 64
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:sculk_catalyst",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:yellow_garnet_gem" /></summary>
+				<Machine config={{
+  "id": "yellow_garnet_gem",
+  "input": [
+    {
+      "id": "techreborn:yellow_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:tnt",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:yellow_garnet_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:dark_ashes_dust",
+      "qty": 12
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+<Machine config={{
+  "id": "yellow_garnet_gem_2",
+  "input": [
+    {
+      "id": "techreborn:yellow_garnet_dust",
+      "qty": 4
+    },
+    {
+      "id": "minecraft:end_crystal",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:yellow_garnet_gem",
+      "qty": 3
+    },
+    {
+      "id": "techreborn:ender_eye_small_dust",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:implosion_compressor",
+  "meta": {
+    "power": 30,
+    "time": 2000
+  }
+}} />
+				</details>
 
-**Implosion Compressor** recipes:
-
-| Input A                                                | Input B                                   | Output A                                          | Output B                                           |
-|--------------------------------------------------------|-------------------------------------------|---------------------------------------------------|----------------------------------------------------|
-| 4x <McItem slug="techreborn:diamond_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="minecraft:diamond" inline={true}/> | 16x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:diamond_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="minecraft:diamond" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:emerald_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="minecraft:emerald" inline={true}/> | 16x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:emerald_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="minecraft:emerald" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 1x <McItem slug="techreborn:iridium_alloy_ingot" inline={true}/> | 8x <McItem slug="minecraft:tnt" inline={true}/> | 1x <McItem slug="techreborn:iridium_alloy_plate" inline={true}/> | 4x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 1x <McItem slug="techreborn:iridium_alloy_ingot" inline={true}/> | 2x <McItem slug="minecraft:end_crystal" inline={true}/> | 1x <McItem slug="techreborn:iridium_alloy_plate" inline={true}/> | 2x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:peridot_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:peridot_gem" inline={true}/> | 12x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:peridot_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:peridot_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 9x <McItem slug="minecraft:block_of_redstone" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 9x <McItem slug="minecraft:block_of_redstone" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:red_garnet_gem" inline={true}/> | 8x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:red_garnet_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:ruby_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:ruby_gem" inline={true}/> | 12x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:ruby_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:ruby_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:sapphire_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:sapphire_gem" inline={true}/> | 12x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:sapphire_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:sapphire_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:yellow_garnet_gem" inline={true}/> | 8x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 4x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:yellow_garnet_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-
+		</details>
