some fixes for water cells and art additions

--- a/docs/blocks/machines/industrial_electrolyzer.mdx
+++ b/docs/blocks/machines/industrial_electrolyzer.mdx
@@ -519,7 +519,7 @@ There are a significant number of recipes this machine can make, but below is a 
       "qty": 2
     },
     {
-      "id": "minecraft:water_cell",
+      "id": "techreborn:water_cell",
       "qty": 5
     }
   ],
@@ -1601,13 +1601,13 @@ There are a significant number of recipes this machine can make, but below is a 
   "id": "weathered_cut_copper_slab",
   "input": [
     {
-      "id": "minecraft:exposed_cut_copper_slab",
+      "id": "techreborn:exposed_cut_copper_slab",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "minecraft:weathered_cut_copper_slab",
+      "id": "techreborn:weathered_cut_copper_slab",
       "qty": 1
     }
   ],
