--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -12799,7 +12799,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   ],
   "output": [
     {
-      "id": "minecraft:water_cell",
+      "id": "techreborn:water_cell",
       "qty": 2
     }
   ],
