generating industrial grinder
and it looks pretty stellar

--- a/docs/blocks/machines/industrial_electrolyzer.mdx
+++ b/docs/blocks/machines/industrial_electrolyzer.mdx
@@ -1601,13 +1601,13 @@ There are a significant number of recipes this machine can make, but below is a 
   "id": "weathered_cut_copper_slab",
   "input": [
     {
-      "id": "techreborn:exposed_cut_copper_slab",
+      "id": "minecraft:exposed_cut_copper_slab",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "techreborn:weathered_cut_copper_slab",
+      "id": "minecraft:weathered_cut_copper_slab",
       "qty": 1
     }
   ],
