added ability to show fluid requirements in machine

--- a/docs/blocks/machines/iron_alloy_furnace.mdx
+++ b/docs/blocks/machines/iron_alloy_furnace.mdx
@@ -11,3 +11,7 @@ The **Iron Alloy Furnace** is a non-electric machine that runs on burnables to c
 ## Recipe
 
 <CraftingTable recipe="input techreborn:refined_iron_ingot techreborn:refined_iron_ingot techreborn:refined_iron_ingot input techreborn:iron_furnace air techreborn:iron_furnace input techreborn:refined_iron_ingot techreborn:refined_iron_ingot techreborn:refined_iron_ingot output techreborn:iron_alloy_furnace" />
+
+### Crafting Recipes
+
+For information about available alloys, check out [Alloy Smelter](/docs/blocks/machines/alloy_smelter)
